<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#FFFFFF">
    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/piechartimage"
        android:scaleType="center"
        android:contentDescription="@string/contentPie">
    </ImageView>
    <TextView
        android:id="@+id/data_entry_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview"
        android:text = "@string/data_entry"
        android:fontFamily = "sans-serif-medium"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:layout_margin="8dp">
    </TextView>
    <TextView
        android:id="@+id/data_entry_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/pie_data_entry_info"
        android:layout_below="@id/data_entry_textview"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/black"
        android:layout_margin="8dp">
    </TextView>
    <TextView
        android:id="@+id/pie_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pie_tag"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/data_entry_info"
        android:layout_margin="8dp">
    </TextView>
    <EditText
        android:id="@+id/tag_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_entry_info"
        android:layout_toEndOf="@id/pie_tag"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-medium"
        android:inputType="text">
    </EditText>
    <TextView
        android:id="@+id/pie_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/pie_values"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/pie_tag"
        android:layout_margin="8dp">
    </TextView>
    <EditText
        android:id="@+id/value_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pie_tag"
        android:layout_toEndOf="@id/pie_value"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-medium"
        android:inputType="numberDecimal">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pie_value"
        android:orientation="vertical">
    <Button
        android:id="@+id/add_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_values"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">
    </Button>
    <Button
        android:id="@+id/plot_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/plot_graph"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">
    </Button>
    <Button
        android:id="@+id/reset_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reset_graph"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="8dp">
    </Button>
    </LinearLayout>
</RelativeLayout>