<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/linechart_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/linechart"
        android:scaleType="centerCrop">
    </ImageView>
    <TextView
        android:id="@+id/line_chart_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linechart_example"
        android:text="@string/line_chart_info"
        android:textSize="36sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff"
        android:layout_margin="8dp">
    </TextView>
    <TextView
        android:id="@+id/linechart_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_chart_info"
        android:text="@string/linechart_data_entry_info"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff"
        android:layout_marginLeft="8dp">
    </TextView>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linechart_description">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll1"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">
        <TextView
            android:id="@+id/ycoordinate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ycoordinate"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffffff"
            android:layout_marginLeft="8dp"
            android:gravity="center">
        </TextView>
        <EditText
            android:id="@+id/input_ycoordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffffff"
            android:layout_marginEnd="24dp"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll2"
        android:orientation="vertical">
        <Button
            android:id="@+id/add_values_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/add_values"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">
        </Button>
        <Button
            android:id="@+id/plot_graph_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/plot_graph"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">
        </Button>
        <Button
            android:id="@+id/reset_graph_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/reset_graph"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="24dp">
        </Button>
    </LinearLayout>
</RelativeLayout>