<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:id = "@+id/barchart_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src = "@drawable/stackedbarexample1"
        android:adjustViewBounds="true">
    </ImageView>
    <TextView
        android:id="@+id/barchart_dataentry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/data_entry"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:layout_below="@id/barchart_image"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium">
    </TextView>
    <TextView
        android:id="@+id/barchart_dataentry_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/barchart_dataentry"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bar_dataentry_info">
    </TextView>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/barchart_dataentry_info"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/barchart_y"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text = "@string/ycoordinate"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="8dp"
            android:gravity="center">
        </TextView>
        <EditText
            android:id="@+id/barchart_y_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:hint="@string/ycoordinate"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-medium"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll1"
        android:orientation="vertical">
        <Button
            android:id="@+id/bar_add_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_values"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/bar_plot_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plot_graph"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp">
        </Button>
        <Button
            android:id="@+id/bar_reset_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_graph"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        </Button>
    </LinearLayout>
</RelativeLayout>